# capsule-run

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LOCAL_TESTING.md  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  comprehensive-test.yml  release.yml  security.yml
docs/: README.md  architecture-diagrams.md  cli.md  configuration.md  installation.md  quickstart.md  security.md  troubleshooting.md
docs/examples/: README.md
scripts/: test-ci-locally.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs  schema.rs  validation.rs
src/executor/: io.rs  io_stats.rs  mod.rs  monitor.rs
src/sandbox/: cgroups.rs  filesystem.rs  macos.rs  mod.rs  namespaces.rs  seccomp.rs
tests/: integration_tests.rs
