[package]
name = "capsule-run"
version = "0.1.0"
edition = "2021"
description = "Lightweight, secure sandboxed command execution for AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/haasonsaas/capsule-run"
keywords = ["sandbox", "security", "ai", "container", "isolation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# CLI and error handling
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Linux system interfaces
nix = { version = "0.28", features = ["mount", "unistd", "signal", "process", "user"] }
libc = "0.2"
caps = "0.5"

# Async and I/O
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Time and monitoring
chrono = { version = "0.4", features = ["serde"] }

# Seccomp
libseccomp = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "capsule-run"
path = "src/main.rs"