[package]
name = "capsule-run"
version = "0.1.0"
edition = "2021"
description = "Lightweight, secure sandboxed command execution for AI agents"
license = "MIT"
repository = "https://github.com/haasonsaas/capsule-run"
keywords = ["sandbox", "security", "ai", "container", "isolation"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
bench = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI and error handling
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Async and I/O
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Time and monitoring
chrono = { version = "0.4", features = ["serde"] }

# Configuration
toml = "0.8"
tempfile = "3.0"

# System interfaces
libc = "0.2"

# Linux system interfaces (only on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["mount", "signal", "process", "user", "sched", "fs"] }
caps = "0.5"
libseccomp = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lib]
name = "capsule_run"
path = "src/lib.rs"

[[bin]]
name = "capsule-run"
path = "src/main.rs"